--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Poison_frog_no_actionbar">
         <activity
-            android:name=".FrogHouseActivity"
+            android:name=".MainActivityFrogHouse"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.Poison_frog">
         </activity>
