--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@drawable/main_frog_jelly"
         android:supportsRtl="true"
         android:theme="@style/Theme.Poison_frog_no_actionbar">
-        <activity android:name=".center.house.ActivityFrogHouse"></activity>
+        <activity android:name=".center.house.ActivityFrogHouse"
+            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustNothing">
