--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pyrion.poison_frog">
 
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.NFC" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/main_frog_jelly"
@@ -9,7 +15,7 @@
         android:roundIcon="@drawable/main_frog_jelly"
         android:supportsRtl="true"
         android:theme="@style/Theme.Poison_frog_no_actionbar">
-        <activity android:name=".egg.ActivityFrogBook"></activity>
+        <activity android:name=".egg.ActivityFrogBook" />
         <activity
             android:name=".IntroActivity"
             android:theme="@style/Theme.Poison_frog_no_actionbar">
@@ -21,14 +27,18 @@
         </activity>
         <activity
             android:name=".center.ItemStore.ActivityItemStore"
-            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustNothing"></activity>
-        <activity android:name=".center.fly_game.FlyGameActivity" />
+            android:windowSoftInputMode="adjustNothing" />
+        <activity android:name=".center.fly_game.FlyGameActivity" /> <!-- 리시버 -->
+        <receiver android:name=".center.Exercise.AlarmReceiver" /> <!-- NFC -->
 
-<!--리시버-->
-        <receiver android:name=".center.Exercise.AlarmReceiver"></receiver>
+        <activity
+            android:name=".Beam"
+            android:theme="@style/Theme.ActivityTransparentBackground" />
+        <activity android:name=".NfcSend"
+            android:theme="@style/Theme.ActivityTransparentBackground" />
     </application>
 
 </manifest>
