--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/main_frog_jelly"
+        android:icon="@drawable/normal"
         android:label="@string/show_app_name"
-        android:roundIcon="@drawable/main_frog_jelly"
+        android:roundIcon="@drawable/normal"
         android:supportsRtl="true"
         android:theme="@style/Theme.Poison_frog_no_actionbar">
         <activity android:name=".kotlin_nfc_write"></activity>
