--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //google map library
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 }
