--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.NFC" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="false" />
 
     <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@drawable/normal"
         android:label="@string/show_app_name"
         android:roundIcon="@drawable/normal"
         android:supportsRtl="true"
         android:theme="@style/Theme.Poison_frog_no_actionbar">
-        <activity android:name=".trade.ActivityCamera"></activity>
+        <activity android:name=".trade.ActivityServerSend"
+            android:theme="@style/Theme.ActivityTransparentBackground"></activity>
+        <activity android:name=".trade.ActivityCamera" />
         <activity
             android:name=".trade.ActivityMap"
             android:theme="@style/Theme.ActivityTransparentBackground" />
@@ -37,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.pyrion.game.poison_frog.center.ItemStore.ActivityItemStore"
+            android:name=".center.ItemStore.ActivityItemStore"
             android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />
         <activity
             android:name=".MainActivity"
