--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
     <application
         android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
-        android:icon="@drawable/normal"
+        android:icon="@drawable/frog_0_normal"
         android:label="@string/show_app_name"
-        android:roundIcon="@drawable/normal"
+        android:roundIcon="@drawable/frog_0_normal"
         android:supportsRtl="true"
         android:theme="@style/Theme.Poison_frog_no_actionbar">
         <activity android:name=".trade.ActivityServerSend"
